--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
+    "vue-loader": "^15.10.1",
     "vue-router": "^4.1.6",
     "vuex": "^4.0.2"
   },
