--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "axios": "^1.3.5",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-loader": "^15.10.1",
+    "vue-router": "^4.1.6",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
