--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,18 @@
 {
+  "version": 2,
   "builds": [
     {
       "src": "client/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "outputDirectory": "client/dist"
+        "distDir": "client/dist"
       }
+    }
+  ],
+  "routes": [
+    {
+      "src": "^/.*",
+      "dest": "/client/dist/index.html"
     }
   ]
 }
