--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
       "src": "client/package.json",
       "use": "@vercel/static-build",
       "config": {
+        "outputDirectory": "client/dist",
         "distDir": "client/dist"
       }
     }
