--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,9 @@
   "builds": [
     {
       "src": "client/package.json",
-      "use": "@vercel/static-build",
+      "use": "@vercel/node",
       "config": {
-        "outputDirectory": "dist",
-        "distDir": "client/dist"
+        "outputDirectory": "client/dist"
       }
     }
   ],
