allows routes to handle diff file types

--- a/vercel.json
+++ b/vercel.json
@@ -3,15 +3,30 @@
   "builds": [
     {
       "src": "client/package.json",
-      "use": "@vercel/node",
+      "use": "@vercel/static-build",
       "config": {
-        "outputDirectory": "client/dist"
+        "outputDirectory": "dist"
       }
     }
   ],
   "routes": [
     {
-      "src": "^/.*",
+      "src": "/(.*).js",
+      "headers": { "cache-control": "public,max-age=31536000,immutable" },
+      "dest": "/client/dist/$1.js"
+    },
+    {
+      "src": "/(.*).css",
+      "headers": { "cache-control": "public,max-age=31536000,immutable" },
+      "dest": "/client/dist/$1.css"
+    },
+    {
+      "src": "/(.*).(png|jpg|ico|jpeg|gif|webp|svg)",
+      "headers": { "cache-control": "public,max-age=31536000,immutable" },
+      "dest": "/client/dist/$1.$2"
+    },
+    {
+      "src": "/(.*)",
       "dest": "/client/dist/index.html"
     }
   ]
