--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "client": "npm run serve --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "start": "node server.js",
-    "build": "npm install --prefix client && npm run build --prefix client"
+    "build": "npm install --prefix client && npm run build --prefix client",
+    "vercel-build": "npm run build"
   },
   "keywords": [],
   "author": "me",
@@ -25,6 +26,7 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@vercel/node": "^2.10.3",
     "concurrently": "^8.0.1",
     "nodemon": "^2.0.22"
   }
