--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "start": "node server.js",
     "build": "npm install --prefix client && npm run build --prefix client",
-    "vercel-build": "npm run build"
+    "vercel-build": "npm run build --prefix client"
   },
   "keywords": [],
   "author": "me",
