--- a/client/package.json
+++ b/client/package.json
@@ -20,9 +20,10 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "vue-loader": "^15.10.1",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "install": "^0.13.0",
+    "vue-loader": "^16.0.0"
   },
   "eslintConfig": {
     "root": true,
