--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
-    "vue-loader": "^15.10.1",
     "vue-router": "^4.1.6",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vercel/node": "^2.10.3",
     "concurrently": "^8.0.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "vue-loader": "^16.0.0"
   }
 }
