--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,8 @@
       "use": "@vercel/node"
     },
     {
-      "src": "client/package.json",
-      "use": "@vercel/vue"
+      "src": "client/**",
+      "use": "build:client"
     }
   ],
   "routes": [
@@ -21,8 +21,24 @@
       "continue": true
     },
     {
-      "src": "/",
+      "src": "/api/.*",
+      "dest": "api/index.js"
+    },
+    {
+      "src": "/.*",
       "dest": "client/dist/index.html"
     }
-  ]
+  ],
+  "env": {
+    "MONGODB_URI": "your-mongodb-uri"
+  },
+  "build": {
+    "env": {
+      "NODE_ENV": "production"
+    },
+    "command": "npm run build",
+    "functions": {
+      "api/**": true
+    }
+  }
 }
