--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "client": "npm run serve --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "start": "node server.js",
-    "build": "npm install --prefix client && npm run build --prefix client",
-    "vercel-build": "npm run build --prefix client",
-    "build:client": "cd client && npm install && npm run build"
+    "build": "npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "me",
